--- a/atividade-displayflex/index.html
+++ b/atividade-displayflex/index.html
@@ -9,11 +9,31 @@
     </head>
     
     <body>
-        <header>
+        <header class = "cabecalho">
             <nav>
-
+                <h1>DIANTIF</h1>
+                <ul>
+                    <li>Cursos</li>
+                    <li>Disciplinas</li>
+                    <li>Professores</li>
+                    <li>Mensagens</li>
+                    <li>Relatórios</li>
+                </ul>
             </nav>
-        </header>        
+        </header>    
+        
+        <main>
+            <section class = "cards">
+                <div class = "card">
+                    <div class = "conteudo-1">
+
+                    </div>
+                    <div class = "conteudo-2">
+
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 
 </html>
