--- a/atividade-displayflex/index.html
+++ b/atividade-displayflex/index.html
@@ -23,16 +23,92 @@
         </header>    
         
         <main>
-            <section class = "cards">
+
+            <section class = "pagina-principal">
+
                 <div class = "card">
                     <div class = "conteudo-1">
-
+                        <a href="">Teste</a>
                     </div>
                     <div class = "conteudo-2">
-
+                        <img src="">
                     </div>
                 </div>
+                <div class = "card">
+                    <div class = "conteudo-1">
+                        <a href="">Teste</a>
+                    </div>
+                    <div class = "conteudo-2">
+                        <img src="">
+                    </div>
+                </div>
+                <div class = "card">
+                    <div class = "conteudo-1">
+                        <a href="">Teste</a>
+                    </div>
+                    <div class = "conteudo-2">
+                        <img src="">
+                    </div>
+                </div>
+                <div class = "card">
+                    <div class = "conteudo-1">
+                        <a href="">Teste</a>
+                    </div>
+                    <div class = "conteudo-2">
+                        <img src="">
+                    </div>
+                </div>
+                <div class = "card">
+                    <div class = "conteudo-1">
+                        <a href="">Teste</a>
+                    </div>
+                    <div class = "conteudo-2">
+                        <img src="">
+                    </div>
+                </div>
+                <div class = "card">
+                    <div class = "conteudo-1">
+                        <a href="">Teste</a>
+                    </div>
+                    <div class = "conteudo-2">
+                        <img src="">
+                    </div>
+                </div>
+                <div class = "card">
+                    <div class = "conteudo-1">
+                        <a href="">Teste</a>
+                    </div>
+                    <div class = "conteudo-2">
+                        <img src="">
+                    </div>
+                </div>
+                <div class = "card">
+                    <div class = "conteudo-1">
+                        <a href="">Teste</a>
+                    </div>
+                    <div class = "conteudo-2">
+                        <img src="">
+                    </div>
+                </div>
+                <div class = "card">
+                    <div class = "conteudo-1">
+                        <a href="">Teste</a>
+                    </div>
+                    <div class = "conteudo-2">
+                        <img src="">
+                    </div>
+                </div>
+                <div class = "card">
+                    <div class = "conteudo-1">
+                        <a href="">Teste</a>
+                    </div>
+                    <div class = "conteudo-2">
+                        <img src="">
+                    </div>
+                </div>
+
             </section>
+
         </main>
     </body>
 
