--- a/atividade-displayflex/index.html
+++ b/atividade-displayflex/index.html
@@ -24,89 +24,140 @@
         
         <main>
 
+            <section class="topo">
+                <form>
+                    <input type="text">
+                    <input type="submit" value="Enviar">
+                </form>
+                <div class = "usuario">
+                    <a href="">João Heli de Oliveira Almeida</a>
+                    <img src="imagens/caret-down-fill.png">
+                </div>
+            </section>
             <section class = "pagina-principal">
 
-                <div class = "card">
-                    <div class = "conteudo-1">
-                        <a href="">Teste</a>
-                    </div>
-                    <div class = "conteudo-2">
-                        <img src="">
-                    </div>
-                </div>
-                <div class = "card">
-                    <div class = "conteudo-1">
-                        <a href="">Teste</a>
-                    </div>
-                    <div class = "conteudo-2">
-                        <img src="">
-                    </div>
-                </div>
-                <div class = "card">
-                    <div class = "conteudo-1">
-                        <a href="">Teste</a>
-                    </div>
-                    <div class = "conteudo-2">
-                        <img src="">
-                    </div>
-                </div>
-                <div class = "card">
-                    <div class = "conteudo-1">
-                        <a href="">Teste</a>
-                    </div>
-                    <div class = "conteudo-2">
-                        <img src="">
-                    </div>
-                </div>
-                <div class = "card">
-                    <div class = "conteudo-1">
-                        <a href="">Teste</a>
-                    </div>
-                    <div class = "conteudo-2">
-                        <img src="">
-                    </div>
-                </div>
-                <div class = "card">
-                    <div class = "conteudo-1">
-                        <a href="">Teste</a>
-                    </div>
-                    <div class = "conteudo-2">
-                        <img src="">
-                    </div>
-                </div>
-                <div class = "card">
-                    <div class = "conteudo-1">
-                        <a href="">Teste</a>
-                    </div>
-                    <div class = "conteudo-2">
-                        <img src="">
-                    </div>
-                </div>
-                <div class = "card">
-                    <div class = "conteudo-1">
-                        <a href="">Teste</a>
-                    </div>
-                    <div class = "conteudo-2">
-                        <img src="">
-                    </div>
-                </div>
-                <div class = "card">
-                    <div class = "conteudo-1">
-                        <a href="">Teste</a>
-                    </div>
-                    <div class = "conteudo-2">
-                        <img src="">
-                    </div>
-                </div>
-                <div class = "card">
-                    <div class = "conteudo-1">
-                        <a href="">Teste</a>
-                    </div>
-                    <div class = "conteudo-2">
-                        <img src="">
-                    </div>
-                </div>
+                <h2>Relatórios</h2>
 
+                <div class = "card">
+                    <div class = "conteudo-1">
+                        <a href="">Alunos com mais de 50% de faltas</a>
+                    </div>
+                    <div class = "conteudo-2">
+                        <div class = "icones">
+                        <img src="imagens/bookmark-fill-frame.png">
+                        <img src="imagens/box-fill.png">
+                        <img src="imagens/bell-fill.png">
+                        </div>
+                    </div>
+                </div>
+                <div class = "card">
+                    <div class = "conteudo-1">
+                        <a href="">Alunos com necessidades especiais</a>
+                    </div>
+                    <div class = "conteudo-2">
+                        <div class = "icones">
+                        <img src="imagens/bookmark-fill-frame.png">
+                        <img src="imagens/box-fill.png">
+                        <img src="imagens/bell-fill.png">
+                        </div>
+                    </div>
+                </div>
+                <div class = "card">
+                    <div class = "conteudo-1">
+                        <a href="">Lista de professores</a>
+                    </div>
+                    <div class = "conteudo-2">
+                        <div class = "icones">
+                        <img src="imagens/bookmark-fill-frame.png">
+                        <img src="imagens/box-fill.png">
+                        <img src="imagens/bell-fill.png">
+                        </div>
+                    </div>
+                </div>
+                <div class = "card">
+                    <div class = "conteudo-1">
+                        <a href="">Diários sem envio</a>
+                    </div>
+                    <div class = "conteudo-2">
+                        <div class = "icones">
+                        <img src="imagens/bookmark-fill-frame.png">
+                        <img src="imagens/box-fill.png">
+                        <img src="imagens/bell-fill.png">
+                        </div>
+                    </div>
+                </div>
+                <div class = "card">
+                    <div class = "conteudo-1">
+                        <a href="">Diários sem aula</a>
+                    </div>
+                    <div class = "conteudo-2">
+                        <div class = "icones">
+                        <img src="imagens/bookmark-fill-frame.png">
+                        <img src="imagens/box-fill.png">
+                        <img src="imagens/bell-fill.png">
+                        </div>
+                    </div>
+                </div>
+                <div class = "card">
+                    <div class = "conteudo-1">
+                        <a href="">Alunos com mais de 80% de faltas</a>
+                    </div>
+                    <div class = "conteudo-2">
+                        <div class = "icones">
+                        <img src="imagens/bookmark-fill-frame.png">
+                        <img src="imagens/box-fill.png">
+                        <img src="imagens/bell-fill.png">
+                        </div>
+                    </div>
+                </div>
+                <div class = "card">
+                    <div class = "conteudo-1">
+                        <a href="">Alunos com menos de 50% de faltas</a>
+                    </div>
+                    <div class = "conteudo-2">
+                        <div class = "icones">
+                        <img src="imagens/bookmark-fill-frame.png">
+                        <img src="imagens/box-fill.png">
+                        <img src="imagens/bell-fill.png">
+                        </div>
+                    </div>
+                </div>
+                <div class = "card">
+                    <div class = "conteudo-1">
+                        <a href="">Equipamentos</a>
+                    </div>
+                    <div class = "conteudo-2">
+                        <div class = "icones">
+                        <img src="imagens/bookmark-fill-frame.png">
+                        <img src="imagens/box-fill.png">
+                        <img src="imagens/bell-fill.png">
+                        </div>
+                    </div>
+                </div>
+                <div class = "card">
+                    <div class = "conteudo-1">
+                        <a href="">Laboratórios inacessíveis</a>
+                    </div>
+                    <div class = "conteudo-2">
+                        <div class = "icones">
+                        <img src="imagens/bookmark-fill-frame.png">
+                        <img src="imagens/box-fill.png">
+                        <img src="imagens/bell-fill.png">
+                        </div>
+                    </div>
+                </div>
+                <div class = "card">
+                    <div class = "conteudo-1">
+                        <a href="">Laboratórios</a>
+                    </div>
+                    <div class = "conteudo-2">
+                        <div class = "icones">
+                        <img src="imagens/bookmark-fill-frame.png">
+                        <img src="imagens/box-fill.png">
+                        <img src="imagens/bell-fill.png">
+                        </div>
+                    </div>
+                </div>
             </section>
 
         </main>
