--- a/atividade-grid/index.html
+++ b/atividade-grid/index.html
@@ -30,7 +30,7 @@
                 </div>
     
 
-                <div class="box">
+                <div class="box-evento">
                     <p>O evento será organizado
                     <span>Cillum</span> singulis voluptate
                     o te <span>enim</span> cillum ad
@@ -64,7 +64,41 @@
                 </div>
 
 
-                
+                <div class="box-palestras">
+                    <ul>
+                        <li>Palestras</li>
+                        <li>Workshops</li>
+                        <li>Minicursos</li>
+                        <li>Estudo de casos</li>
+                        <li>Prêmios</li>
+                    </ul>
+                </div>
+
+                <div class="box-organizacao">
+                    <h2>Organização</h2>
+                    <p>Professores da DIATINF/CNAT/IFRN:</p>
+                    <li>
+                        <ul>Profa. Alyana Macêdo</ul>
+                        <ul>Profa. Danielle Freitas</ul>
+                    </li>
+                </div>
+
+                <div class="inscricao">
+                    <div class="inscricao-2">
+                    <h2>Inscrição</h2>
+                    <form>
+                        <label for="nome"></label>
+                        <input type="text" id="nome" placeholder="Nome" style="width: 90%;">
+                        <label for="email"></label>
+                        <input type="email" id="email" placeholder="E-mail" style="width: 90%;">
+                        <label for="numero"></label>
+                        <input type="tel" id="numero" placeholder="Número" style="width: 90%;"><br>
+                        <input type="checkbox" id="aluno">
+                        <label for="aluno">Aluno do IF</label>
+                    </form>
+                    <input type="button" value="Enviar">
+                    </div>
+                </div>
 
         </main>
 
