--- a/atividade-grid/index.html
+++ b/atividade-grid/index.html
@@ -74,6 +74,11 @@
                     </ul>
                 </div>
 
+                <div class="imagem-1">
+                    <img src="imagens/amanda.jpg">
+                    <div class="texto-central">Amanda</div>
+                </div>
+
                 <div class="box-organizacao">
                     <h2>Organização</h2>
                     <p>Professores da DIATINF/CNAT/IFRN:</p>
@@ -88,11 +93,11 @@
                     <h2>Inscrição</h2>
                     <form>
                         <label for="nome"></label>
-                        <input type="text" id="nome" placeholder="Nome" style="width: 90%;">
+                        <input type="text" id="nome" placeholder="Nome" style="width: 90%;"><br><br>
                         <label for="email"></label>
-                        <input type="email" id="email" placeholder="E-mail" style="width: 90%;">
+                        <input type="email" id="email" placeholder="E-mail" style="width: 90%;"><br><br>
                         <label for="numero"></label>
-                        <input type="tel" id="numero" placeholder="Número" style="width: 90%;"><br>
+                        <input type="tel" id="numero" placeholder="Número" style="width: 90%;"><br><br>
                         <input type="checkbox" id="aluno">
                         <label for="aluno">Aluno do IF</label>
                     </form>
