--- a/atividade-grid/index.html
+++ b/atividade-grid/index.html
@@ -63,7 +63,6 @@
                     </table>
                 </div>
 
-
                 <div class="box-palestras">
                     <ul>
                         <li>Palestras</li>
@@ -77,6 +76,21 @@
                 <div class="imagem-1">
                     <img src="imagens/amanda.jpg">
                     <div class="texto-central">Amanda</div>
+                </div>
+
+                <div class="imagem-2">
+                    <img src="imagens/ellen.jpg">
+                    <div class="texto-central">Amanda</div>
+                </div>
+
+                <div class="imagem-3">
+                    <img src="imagens/georgia.jpg">
+                    <div class="texto-central">Amanda</div>
+                </div>
+
+                <div class="imagem-4">
+                    <img src="imagens/henrique.jpg">
+                    <div class="texto-central">Henrique</div>
                 </div>
 
                 <div class="box-organizacao">
