--- a/atividade-grid/index.html
+++ b/atividade-grid/index.html
@@ -10,121 +10,108 @@
     </head>
 
     <body>
-        <header class="cabecalho">
-            <div>
+
+        <header>
             <h1>SHIFT</h1>
             <h2>1o Encontro de UX no IFRN</h2>
-            </div>
         </header>
 
-        <main>
+        <nav>
+            <ul>
+                <li>Inscrição</li>
+                <li>Programação</li>
+                <li>Palestrantes</li>
+                <li>Organização</li>
+                <li>Contato</li>
+            </ul>
+        </nav>
 
-                <div class="navegacao">
-                    <ul>
-                        <li>Inscrições</li>
-                        <li>Programação</li>
-                        <li>Palestrantes</li>
-                        <li>Organização</li>
-                        <li>Contato</li>
-                    </ul>
-                </div>
-    
+        <div class="box-1">
+            <p>O evento será organizado
+            <span>Cillum</span> singulis voluptate
+            o te <span>enim</span> cillum ad
+            aliquip, <span>incididunt</span>.
+            </p>
+        </div>
 
-                <div class="box-evento">
-                    <p>O evento será organizado
-                    <span>Cillum</span> singulis voluptate
-                    o te <span>enim</span> cillum ad
-                    aliquip, <span>incididunt</span>.
-                    </p>
-                </div>
+        <div class="prog">
+            <h2>Programação</h2>
+            <table>
+            <tr>
+                <td rowspan="2">Dia 03/06</td>
+                <td>08:00</td>
+                <td>Abertura</td>
+            </tr>
+            <tr>
+                <td>11:00</td>
+                <td>Sorteios</td>
+            </tr>
+            <tr>
+                <td rowspan="2">Dia 04/06</td>
+                <td>08:00</td>
+                <td>Palestra de Andrei Gurgel</td>
+            </tr>
+            <tr>
+                <td>11:00</td>
+                <td>Sorteios</td>
+            </tr>
+            </table>
+        </div>
 
-                <div class="programacao">
+        <div class="p1">
+            <img src="imagens/amanda.jpg">
+        </div>
 
-                    <h2>Programação</h2>
-                    <table>
-                    <tr>
-                        <td rowspan="2">Dia 03/06</td>
-                        <td>08:00</td>
-                        <td>Abertura</td>
-                    </tr>
-                    <tr>
-                        <td>11:00</td>
-                        <td>Sorteios</td>
-                    </tr>
-                    <tr>
-                        <td rowspan="2">Dia 04/06</td>
-                        <td>08:00</td>
-                        <td>Palestra de Andrei Gurgel</td>
-                    </tr>
-                    <tr>
-                        <td>11:00</td>
-                        <td>Sorteios</td>
-                    </tr>
-                    </table>
-                </div>
+        <div class="box-2">
+            <ul>
+                <li>Palestras</li>
+                <li>Workshops</li>
+                <li>Minicursos</li>
+                <li>Estudos de casos</li>
+                <li>Prêmios</li>
+            </ul>
+        </div>
 
-                <div class="box-palestras">
-                    <ul>
-                        <li>Palestras</li>
-                        <li>Workshops</li>
-                        <li>Minicursos</li>
-                        <li>Estudo de casos</li>
-                        <li>Prêmios</li>
-                    </ul>
-                </div>
+        <div class="ins">
+            <h2>Inscrição</h2>
+            <form>
+                <label for="nome"></label>
+                <input type="text" id="nome" placeholder="Nome" style="width: 90%;"><br><br>
+                <label for="email"></label>
+                <input type="email" id="email" placeholder="E-mail" style="width: 90%;"><br><br>
+                <label for="numero"></label>
+                <input type="tel" id="numero" placeholder="Número" style="width: 90%;"><br><br>
+                <input type="checkbox" id="aluno">
+                <label for="aluno">Aluno do IF</label>
+            </form>
+            <input type="button" value="Enviar">
+        </div>
 
-                <div class="imagem-1">
-                    <img src="imagens/amanda.jpg">
-                    <div class="texto-central">Amanda</div>
-                </div>
+        <div class="p2">
+            <img src="imagens/georgia.jpg">
+        </div>
 
-                <div class="imagem-2">
-                    <img src="imagens/ellen.jpg">
-                    <div class="texto-central">Amanda</div>
-                </div>
+        <div class="p3">
+            <img src="imagens/henrique.jpg">
+        </div>
 
-                <div class="imagem-3">
-                    <img src="imagens/georgia.jpg">
-                    <div class="texto-central">Amanda</div>
-                </div>
+        <div class="p4">
+            <img src="imagens/ellen.jpg">
+        </div>
 
-                <div class="imagem-4">
-                    <img src="imagens/henrique.jpg">
-                    <div class="texto-central">Henrique</div>
-                </div>
-
-                <div class="box-organizacao">
-                    <h2>Organização</h2>
-                    <p>Professores da DIATINF/CNAT/IFRN:</p>
-                    <li>
-                        <ul>Profa. Alyana Macêdo</ul>
-                        <ul>Profa. Danielle Freitas</ul>
-                    </li>
-                </div>
-
-                <div class="inscricao">
-                    <div class="inscricao-2">
-                    <h2>Inscrição</h2>
-                    <form>
-                        <label for="nome"></label>
-                        <input type="text" id="nome" placeholder="Nome" style="width: 90%;"><br><br>
-                        <label for="email"></label>
-                        <input type="email" id="email" placeholder="E-mail" style="width: 90%;"><br><br>
-                        <label for="numero"></label>
-                        <input type="tel" id="numero" placeholder="Número" style="width: 90%;"><br><br>
-                        <input type="checkbox" id="aluno">
-                        <label for="aluno">Aluno do IF</label>
-                    </form>
-                    <input type="button" value="Enviar">
-                    </div>
-                </div>
-
-        </main>
+        <div class="org">
+            <h2>Organização</h2>
+            <p>Professores da DIATINF/CNAT/IFRN</p>
+            <ul>
+                <li>Profa. Aylana Macêdo</li>
+                <li>Profa. Danielle Freitas</li>
+            </ul>
+        </div>
 
         <footer>
             <p>Desenvolvido por IFRN</p>
         </footer>
-    
+
     </body>
 
-    </html>
+</html>
