--- a/atividade-grid/index.html
+++ b/atividade-grid/index.html
@@ -59,7 +59,7 @@
         </div>
 
         <div class="p1">
-            <img src="imagens/amanda.jpg">
+            <p class="descricao">Amanda</p>
         </div>
 
         <div class="box-2">
@@ -88,15 +88,15 @@
         </div>
 
         <div class="p2">
-            <img src="imagens/georgia.jpg">
+            <p class="descricao">Natália Lima</p>
         </div>
 
         <div class="p3">
-            <img src="imagens/henrique.jpg">
+            <p class="descricao">Henrique Almeida</p>
         </div>
 
         <div class="p4">
-            <img src="imagens/ellen.jpg">
+            <p class="descricao">Larissa Fernandes</p>
         </div>
 
         <div class="org">
