--- a/atividade-grid/index.html
+++ b/atividade-grid/index.html
@@ -32,6 +32,9 @@
             o te <span>enim</span> cillum ad
             aliquip, <span>incididunt</span>.
             </p>
+            <div class="button">
+                <p>Leia mais</p>
+            </div>
         </div>
 
         <div class="prog">
@@ -82,7 +85,7 @@
                 <label for="numero"></label>
                 <input type="tel" id="numero" placeholder="Número" style="width: 90%;"><br><br>
                 <input type="checkbox" id="aluno">
-                <label for="aluno">Aluno do IF</label>
+                <label for="aluno">Aluno do IF</label><br><br>
             </form>
             <input type="button" value="Enviar">
         </div>
