--- a/atividade-submenu/index.html
+++ b/atividade-submenu/index.html
@@ -12,6 +12,8 @@
     <body>
     
         <header>
+
+            <div class="diatinf"></div>
             <nav>
                 <div class="dropdown">
                     <h2>A Diretoria</h2>
