--- a/atividade-submenu/index.html
+++ b/atividade-submenu/index.html
@@ -13,10 +13,12 @@
     
         <header>
 
-            <div class="diatinf"></div>
+            <div class="diatinf">
+                <h1>DIATINF</h1>
+            </div>
             <nav>
                 <div class="dropdown">
-                    <h2>A Diretoria</h2>
+                    <a href="#">A Diretoria</a>
                     <div class="dropdown-content">
                         <a href="#">Sobre</a>
                         <a href="#">Identidade Visual</a>
@@ -25,11 +27,11 @@
                         <a href="#">COLABINF</a>
                     </div>
                 </div>
-                <div><h2>Horários</h2></div>
-                <div><h2>Cursos</h2></div>
-                <div><h2>Docentes</h2></div>
+                <div><a href="#">Horários</a></div>
+                <div><a href="#">Cursos</a></div>
+                <div><a href="#">Docentes</a></div>
                 <div class="dropdown">
-                    <h2>Documentos</h2>
+                    <a href="#">Documentos</a>
                     <div class="dropdown-content">
                         <a href="#">Sobre</a>
                         <a href="#">Identidade Visual</a>
@@ -38,8 +40,8 @@
                         <a href="#">COLABINF</a>
                     </div>
                 </div>
-                <div><h2>Eventos</h2></div>
-                <div><h2>Contato</h2></div>
+                <div><a href="#">Eventos</a></div>
+                <div><a href="#">Contato</a></div>
             </nav>            
         </header>
 
