--- a/atividade-submenu/index.html
+++ b/atividade-submenu/index.html
@@ -12,37 +12,39 @@
     <body>
     
         <header>
+            
+            <img src="logo-diatinf.png">
 
-            <div class="diatinf">
-                <h1>DIATINF</h1>
-            </div>
             <nav>
-                <div class="dropdown">
-                    <a href="#">A Diretoria</a>
-                    <div class="dropdown-content">
-                        <a href="#">Sobre</a>
-                        <a href="#">Identidade Visual</a>
-                        <a href="#">Pedagogia</a>
-                        <a href="#">Pesquisa e Extensão</a>
-                        <a href="#">COLABINF</a>
+                <div>
+                    <div class="dropdown">
+                        <a href="#">A diretoria</a>
+                        <div class="dropdown-content">
+                            <a href="#">Sobre</a>
+                            <a href="#">Identidade Visual</a>
+                            <a href="#">Pedagogia</a>
+                            <a href="#">Pesquisa e Extensão</a>
+                            <a href="#">COLABINF</a>
+                        </div>
                     </div>
-                </div>
-                <div><a href="#">Horários</a></div>
-                <div><a href="#">Cursos</a></div>
-                <div><a href="#">Docentes</a></div>
-                <div class="dropdown">
-                    <a href="#">Documentos</a>
-                    <div class="dropdown-content">
-                        <a href="#">Sobre</a>
-                        <a href="#">Identidade Visual</a>
-                        <a href="#">Pedagogia</a>
-                        <a href="#">Pesquisa e Extensão</a>
-                        <a href="#">COLABINF</a>
+                    <a href="#">Horários</a>
+                    <a href="#">Cursos</a>
+                    <a href="#">Docentes</a>
+                    <div class="dropdown">
+                        <a href="#">Documentos</a>
+                        <div class="dropdown-content">
+                            <a href="#">Sobre</a>
+                            <a href="#">Identidade Visual</a>
+                            <a href="#">Pedagogia</a>
+                            <a href="#">Pesquisa e Extensão</a>
+                            <a href="#">COLABINF</a>
+                        </div>
                     </div>
+                    <a href="#">Eventos</a>
+                    <a href="#">Contato</a>
                 </div>
-                <div><a href="#">Eventos</a></div>
-                <div><a href="#">Contato</a></div>
-            </nav>            
+            </nav>
+
         </header>
 
     </body>
