--- a/site-raw/faq.html
+++ b/site-raw/faq.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="sobre.html">SOBRE</a></li>
                 <li><a href="pratos.html">PRATOS</a></li>
-                <li><a href="faq.html">FAQ</a></li>
+                <li class="atual"><a href="faq.html">FAQ</a></li>
                 <li><a href="contato.html">ENTRE EM CONTATO</a></li>
             </ul>
         </nav>
