--- a/site-raw/pratos.html
+++ b/site-raw/pratos.html
@@ -19,7 +19,7 @@
             <h1><a href="index.html">restaurant raw</a></h1>
             <ul>
                 <li><a href="sobre.html">SOBRE</a></li>
-                <li><a href="pratos.html">PRATOS</a></li>
+                <li class="atual"><a href="pratos.html">PRATOS</a></li>
                 <li><a href="faq.html">FAQ</a></li>
                 <li><a href="contato.html">ENTRE EM CONTATO</a></li>
             </ul>
