--- a/site-raw/faq.html
+++ b/site-raw/faq.html
@@ -14,7 +14,7 @@
     <header>
 
         <picture><a href="index.html"><img src="imagens/logo.png"></a></picture>
-        
+
         <nav>
             <h1><a href="index.html">restaurant raw</a></h1>
             <ul>
@@ -29,21 +29,66 @@
 
     <main>
         <section class="faq-section">
+
+            <h2>PERGUNTAS FREQUENTES</h2>
             <details>
-                <summary>O QUE É RAW?</summary>
-                <p>O Raw é um restaurante</p>
+                <summary>O QUE É O RAW?</summary>
+                <p>Somos um restaurante de culinária natural e 100% à base de plantas. Nosso cardápio celebra
+                    ingredientes frescos e puros, com opções que vão de pratos crus, cheios de vitalidade, a pratos
+                    cozidos de forma saudável e criativa, sempre valorizando o sabor original dos alimentos.</p>
             </details>
             <details>
-                <summary>O QUE É RAW?</summary>
-                <p>O Raw é um restaurante</p>
+                <summary>O RESTAURANTE É TOTALMENTE VEGANO?</summary>
+                <p>Sim, com muito orgulho! Nenhum de nossos pratos, bebidas ou sobremesas contém qualquer ingrediente de
+                    origem animal. Tudo no RAW é 100% vegano, ético e preparado com consciência, do prato principal ao
+                    cafezinho.</p>
             </details>
             <details>
-                <summary>O QUE É RAW?</summary>
-                <p>O Raw é um restaurante</p>
+                <summary>DE ONDE VÊM OS INGREDIENTES DE VOCÊS?</summary>
+                <p>Nossa prioridade é usar ingredientes frescos, sazonais e de alta qualidade. Damos preferência a
+                    produtores locais de Natal e do Rio Grande do Norte, apoiando a agricultura familiar e garantindo
+                    que o sabor em seu prato seja o mais autêntico e natural possível.</p>
             </details>
             <details>
-                <summary>O QUE É RAW?</summary>
-                <p>O Raw é um restaurante</p>
+                <summary>VOCÊS TÊM OPÇÕES PARA PESSOAS COM RESTRIÇÕES ALIMENTARES?</summary>
+                <p>Sim. A maioria do nosso cardápio é naturalmente sem glúten e temos diversas opções sem soja ou nozes.
+                    Nossos atendentes estão preparados para te ajudar a escolher o melhor prato de acordo com sua
+                    necessidade. Apenas nos informe sobre sua restrição ao fazer o pedido.</p>
+            </details>
+            <details>
+                <summary>PRECISO FAZER RESERVA PARA IR AO RAW?</summary>
+                <p>Recomendamos fortemente a reserva, principalmente para jantares nos fins de semana e para grupos.
+                    Isso garante sua mesa e uma experiência mais tranquila. No entanto, sempre faremos o nosso melhor
+                    para acomodar clientes que chegam sem reserva.</p>
+            </details>
+            <details>
+                <summary>O RAW FAZ ENTREGAS (DELIVERY)?</summary>
+                <p>Sim! Você pode saborear nossa comida no conforto da sua casa. Estamos nos principais aplicativos de
+                    delivery da cidade. Você também pode fazer seu pedido diretamente conosco por telefone e passar para
+                    buscar (takeaway).</p>
+            </details>
+            <details>
+                <summary>QUAL É O HORÁRIO DE FUNCIONAMENTO?</summary>
+                <p>Funcionamos para almoço de terça a domingo, das 12:00 às 15:00, e para jantar de terça a sábado, das
+                    19:00 às 23:00. Estamos fechados às segundas-feiras para recarregar as energias e buscar novas
+                    inspirações na natureza.</p>
+            </details>
+            <details>
+                <summary>O AMBIENTE É ADEQUADO PARA CRIANÇAS?</summary>
+                <p>Com certeza! Adoramos receber famílias e temos um ambiente acolhedor para todas as idades. Nosso
+                    cardápio inclui opções mais simples que costumam agradar ao paladar infantil, como nossos mini
+                    hambúrgueres e sucos naturais.</p>
+            </details>
+            <details>
+                <summary>POSSO REALIZAR UM EVENTO OU COMEMORAÇÃO NO RESTAURANTE?</summary>
+                <p>Sim, nosso espaço está disponível para eventos privados, aniversários e confraternizações. Entre em
+                    contato conosco com antecedência para conversarmos sobre suas necessidades e ajudarmos a criar um
+                    momento especial e personalizado para você e seus convidados.</p>
+            </details>
+            <details>
+                <summary>QUAIS FORMAS DE PAGAMENTO SÃO ACEITAS?</summary>
+                <p>Para sua comodidade, aceitamos as principais formas de pagamento. Você pode pagar com cartões de
+                    crédito e débito (Visa, Mastercard, Elo), via Pix ou em dinheiro.</p>
             </details>
         </section>
     </main>
