--- a/site-raw/index.html
+++ b/site-raw/index.html
@@ -42,6 +42,8 @@
                 <br><br>
                 Nossa cozinha é um manifesto: pela saúde, pelo planeta e pelo prazer de comer bem
                 </p>
+                <br>
+                <a href="pratos.html"><button href="pratos.html">Conheça nossos pratos</button></a>
             </article>
 
             <picture>
